# vapdj2

./: pyproject.toml
vap/: requirements.txt
vap/Account/: admin.py  forms.py  models.py
vap/Account/migrations/: 0001_initial.py
vap/Catalog/: admin.py  models.py  serializers.py  urls.py  views.py
vap/Catalog/migrations/: 0001_initial.py  0002_alter_product_description_and_more.py
vap/Order/: admin.py  models.py
vap/Order/migrations/: 0001_initial.py  0002_quote_complete.py
vap/Pages/: models.py  urls.py  views.py
vap/Pages/static/styles/: main.css
vap/templates/: base.html  header.html  index.html
vap/vap/: asgi.py  settings.py  urls.py  wsgi.py
